Render Image output renders correctly but Render Animation output is incorrect. #46679

Closed
opened 2015-11-02 21:34:29 +01:00 by Bryson Jack · 15 comments

I made a test scene to develop a workflow for dividing up a Cycles animation into separate render layers, rendering them out and recombining them.

I noticed as I was putting everything back together that the frames from the render layers with masking, that were rendered with Render Animation (Ctrl+F12) have all kinds of inaccuracies where the masking is wrong, but when I re-render the messed up frame with Render Image (F12) the bad frame is suddenly rendered correctly. What is even more perplexing is that the mistakes are not consistent. When I re-render with Render Animation (Ctrl+F12), the errors can appear on different frames and other previously inaccurate frames can get fixed.

I am even getting these errors when I Load Factory Settings and then open the scene.

I posted this on Blender Stack Exchange and no one has any answers but one user was able to reproduce and confirm the problem (see comments)
http://blender.stackexchange.com/questions/40758/why-is-my-render-image-output-correct-but-my-render-animation-output-is-incorrec

Blend file is here:
https://dl.dropboxusercontent.com/u/6647893/Forum_Help/Render_Layer_Animation_Test2.zip

I made a test scene to develop a workflow for dividing up a Cycles animation into separate render layers, rendering them out and recombining them. I noticed as I was putting everything back together that the frames from the render layers with masking, that were rendered with Render Animation (Ctrl+F12) have all kinds of inaccuracies where the masking is wrong, but when I re-render the messed up frame with Render Image (F12) the bad frame is suddenly rendered correctly. What is even more perplexing is that the mistakes are not consistent. When I re-render with Render Animation (Ctrl+F12), the errors can appear on different frames and other previously inaccurate frames can get fixed. I am even getting these errors when I Load Factory Settings and then open the scene. I posted this on Blender Stack Exchange and no one has any answers but one user was able to reproduce and confirm the problem (see comments) http://blender.stackexchange.com/questions/40758/why-is-my-render-image-output-correct-but-my-render-animation-output-is-incorrec Blend file is here: https://dl.dropboxusercontent.com/u/6647893/Forum_Help/Render_Layer_Animation_Test2.zip
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @BrysonJack

Added subscriber: @BrysonJack
Author

CPU: Intel Core i5-2500K CPU @ 3.30GHz
GPU: GeForce GTX 560 Ti, 1GB Dedicated Video Memory (2 cards)
RAM: 8.00 GB
OS: Windows 7 Pro, Service Pack 1
Drivers: NVIDIA 358.50
Blender: 2.76 Date: 2015-10-11 06:55 Hash: 48f7dd6

https://dl.dropboxusercontent.com/u/6647893/Forum_Help/system-info.txt.txt

CPU: Intel Core i5-2500K CPU @ 3.30GHz GPU: GeForce GTX 560 Ti, 1GB Dedicated Video Memory (2 cards) RAM: 8.00 GB OS: Windows 7 Pro, Service Pack 1 Drivers: NVIDIA 358.50 Blender: 2.76 Date: 2015-10-11 06:55 Hash: 48f7dd6 https://dl.dropboxusercontent.com/u/6647893/Forum_Help/system-info.txt.txt
Aaron Carlisle self-assigned this 2015-11-02 21:49:13 +01:00
Aaron Carlisle removed their assignment 2015-11-02 21:50:07 +01:00

Added subscriber: @Sergey

Added subscriber: @Sergey

I can't really reproduce the issue. Please try isolating circumstances which affects on this. For example:

  • Try other computer
  • Try rendering on CPU or GPU
  • Try rendering from the command line
  • Try rendering with single thread only
I can't really reproduce the issue. Please try isolating circumstances which affects on this. For example: - Try other computer - Try rendering on CPU or GPU - Try rendering from the command line - Try rendering with single thread only

Added subscriber: @candreacchio

Added subscriber: @candreacchio

Just looked into it, i can reproduce it. CPU and GPU both are effected

Simple scene here -- simpleTest.blend

Render animation, notice how the mask object is static, scrub the timeline and the mask object is moving.

tested on git df61c50ffa

Just looked into it, i can reproduce it. CPU and GPU both are effected Simple scene here -- [simpleTest.blend](https://archive.blender.org/developer/F250280/simpleTest.blend) Render animation, notice how the mask object is static, scrub the timeline and the mask object is moving. tested on git df61c50ffae9463eafb30b7a3e23b4fcaaca7dbf

To me the mask object is totally static.

Please test command line option and rendering with a single thread.

To me the mask object is totally static. Please test command line option and rendering with a single thread.

The mask object (cone) should be moving, it has animation on it (viewable in the viewport)

Rendering via commandline produced the same incorrect result.

Tried to render with the depsgraph with a single thread but couldnt figure out the command argument

With the debugging turned on, it looks like it was only recalculating the Cubes location instead of the Cube and Cone.

The mask object (cone) should be moving, it has animation on it (viewable in the viewport) Rendering via commandline produced the same incorrect result. Tried to render with the depsgraph with a single thread but couldnt figure out the command argument With the debugging turned on, it looks like it was only recalculating the Cubes location instead of the Cube and Cone.

Ah ok, got it now.

Ah ok, got it now.

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Looked into this, the layers that are excluded aren't updating.

This patch resolves the bug by updating mask layers even when exclude is enabled - P297,
though I'm not familiar with this area - and how its expected to work when exclude is mixed with mask.

Related commit, 09b34e69d4

Looked into this, the layers that are excluded aren't updating. This patch resolves the bug by updating mask layers even when exclude is enabled - [P297](https://archive.blender.org/developer/P297.txt), though I'm not familiar with this area - and how its expected to work when exclude is mixed with mask. Related commit, 09b34e69d4
Sergey Sharybin was assigned by Bastien Montagne 2016-01-22 12:12:46 +01:00

Added subscriber: @mont29

Added subscriber: @mont29

This issue was referenced by e4c83bc345

This issue was referenced by e4c83bc3459847c33269557499cc891ed4f747af

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46679
No description provided.