Fix T46679: ZMask layers don't update w/ animation

Make sure z-mask layers aren't excluded for animation evaluation.